hetz/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/server-snippet: |
#      sendfile on;
#      tcp_nodelay on;
#      tcp_nopush on;
#      location /notifications/hub {
#        proxy_set_header Upgrade $http_upgrade;
#        proxy_set_header Connection "upgrade";
#      }
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      more_set_headers "Request-Id: $req_id";
#    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
#    nginx.ingress.kubernetes.io/enable-cors: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/limit-connections: "25"
#    nginx.ingress.kubernetes.io/limit-rps: "15"
#    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - vault.spacemule.net
    secretName: vaultwarden-secret
  rules:
  - host: vault.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
      - path: /notifications/hub
        pathType: Exact
        backend:
          service:
            name: vaultwarden
            port:
              number: 3012
